# todo-list-vue

back/: pyproject.toml
back/config/: settings.py  urls.py
back/todo/: models.py  serializers.py  views.py
back/todo/migrations/: 0001_initial.py  0002_tarefa_descricao_tarefa_nome.py
todo-list/: package-lock.json  package.json
todo-list/src/: App.vue  main.js
todo-list/src/api/: todo.js
todo-list/src/plugins/: axios.js  index.js
todo-list/src/router/: index.js
todo-list/src/views/: Tarefas.vue  To-do.vue
